posiGen_FullsendBox/src/objects/Opportunity_Collaboration_Recovery__c.object
<CustomObject>
    <fields>
        <fullName>BoxCollaboration_Id__c</fullName>
        <label>BoxCollaboration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Folder</label>
        <referenceTo>Sub_Folder__c</referenceTo>
        <relationshipLabel>Opportunity Collaboration Recovery</relationshipLabel>
        <relationshipName>Opportunity_Collaboration_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <label>UserEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Collaboration Recovery</label>
    <nameField>
        <label>Opportunity Collaboration Recovery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Collaboration Recovery</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>